applied corrections in swagger documentation.
