# dto/dto.go
@@ -1,0 +1,14 @@
+package dto
+
+type ProductRequest struct {
+	Name        string  `json:"name" binding:"required"`
+	Price       float64 `json:"price" binding:"required"`
+	Description string  `json:"description" binding:"required"`
+}
+
+type ProductResponse struct {
+	ID          int     `json:"id"`
+	Name        string  `json:"name"`
+	Price       float64 `json:"price"`
+	Description string  `json:"description"`
+}
